--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section>
             <h2>Accueil</h2>
             <p>Bienvenue sur mon site web !</p>
-            <h3>À propos de moi</h3>
+            <h3>Profil</h3>
             <p>Je suis un développeur web passionné par la programmation et le design. J'aime créer des sites web et des applications web qui sont à la fois beaux et fonctionnels.</p>
             <h3>Me contacter</h3>
             <p>Vous pouvez me contacter par e-mail à l'adresse suivante : <a href="mailto: jeanbobmichel.cestfaux@kevin.com">jeanbobmichel.cestfaux@kevin.com</a></p>
