Modification faite pour que ce soit propre

--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
 </head>
 <body>
     <header>
-        <h1>Bastien Tnc</h1>
+        <h1>Bienvenue sur ma page</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="about.html">A propos</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
+    
     <main>
         <section>
             <h2>Accueil</h2>
@@ -28,3 +29,4 @@
 </body>
 
 </html>
+
